maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:4: error: ';' expected but ')' found.
while (!isFacingWall()) {forward()}; while ((!test1)&&(!isFacingWall())) {}; while ((!test2)&&(!isFacingWall())) {})} 
                                                                                                                   ^